# ExVR

./: .gitignore  0.Install_in_venv.bat  1.Start_in_venv.bat  build.spec  config.json  data.json  hand_test.py  hotkeys.json  main.py  main.spec  main_zh.py  pyproject.toml  readme.md  readme_zh.md  requirements.txt  run.bat  smoothing.json  test.py
SlimeVRServer_Simple/: DataBaseController.py  SLMPTransverter.py  SlimeVRDeviceHandler.py  SlimeVRServer.py  filter.py
SlimeVRServer_Simple/UDP/: UDPPackage.py  UDPProtocolParser.py
drivers/vmt/: setting.json
drivers/vmt_prev/: setting.json
mobileposer/: config.py  live_demo.py
model/: hand_feature_model.pkl  model_epoch_196.pth  regression_model.pkl
models/: hand_feature_model.pkl  hand_regression_model.pkl
modules/: face_blendshapes.onnx  face_detector.onnx  face_geometry_metadata.npz  hand_landmark_lite_tflite2onnx.onnx  hand_landmark_tracking_cpu.binarypb  tongue_keypoint.onnx
settings/: config.json  data.json  gestures.json  hotkeys.json  smoothing.json
templates/: controller.html
templates/ssl/: cert.pem  key.pem
tracker/controller/: controller.py
tracker/controller/templates/: controller.html  controller_temp.html  index.html
tracker/face/: directml_face.py  face.py  tongue.py
tracker/face/tongue_model/: model_training.py
tracker/hand/: directml_hands.py  gesture.py  hand.py  hand_temp.py
tracker/hand/hand_depth_model/: model_training.py  prepare_dataset.py
tracker/pose/: pose.py  pose_temp.py
translations/: en-US.qm  en-US.ts  exvr_zh_CN.qm  exvr_zh_CN.ts  zh-CN.qm  zh-CN.ts
utils/: GUITemplate.py  actions.py  config.py  data.py  globals.py  hand_sender.py  hotkeys.py  json_manager.py  language.py  model_provider.py  mp_compat.py  ort_scheduler.py  paths.py  sender.py  smoothing.py  tracking.py
zh_cn/: readme_zh.md
